--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 		<script src="/jquery.min.js"></script>
 		<script src="/util.js"></script>
 		<script src="/Color.js"></script>
+		<script src="/binary.js"></script>
 		<script src="/Client.js"></script>
 		<script src="/NoteQuota.js"></script>
 		<script src="/lame.min.js"></script>
