--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<ul></ul>
 			<input placeholder="You can chat with this thing." class="translate" maxlength="512"/>
 		</div>
+		
+		<div id="room-notice"></div>
 
 		<div id="names"></div>
 
