--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 			<input placeholder="You can chat with this thing." class="translate" maxlength="512"/>
 		</div>
 
+		<div id="room-notice"></div>
+
 		<div id="names"></div>
 
 		<div id="piano"></div>
